fix: add z-index for nav

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -85,6 +85,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
   @media screen and (max-width: 352px) {
     min-height: 48px;
   }
